--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "rap2hpoutre/fast-excel": "^5.3",
+        "stripe/stripe-php": "^12.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
